--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  color: #455a64;
 }
 
 body {
@@ -7,7 +8,7 @@ body {
 }
 
 h2 {
-  color: #455a64;
+  text-align: left;
 }
 
 p {
@@ -27,6 +28,7 @@ li:first-letter {
 
 ul {
   padding: 0;
+  font-size: 12px;
 }
 
 .card {
